# clemency

./: CMakeLists.txt  README.md
gloop/: CMakeLists.txt
gloop/include/gloop/: exceptions.hpp  gloop.hpp  glu.hpp  glut.hpp  ref.hpp  stringfuncs.hpp
gloop/include/gloop/gl/: fbo.hpp  shader.hpp  surface.hpp  texparam.hpp  vbo.hpp  vertexformat.hpp
gloop/include/gloop/image/: radiance.hpp
gloop/include/gloop/math/: .matrix.hpp.swp  matrix.hpp  quaternion.hpp  vector.hpp
gloop/include/gloop/model/: obj_format.hpp  ply_format.hpp  stream.hpp  vtk_format.hpp
gloop/src/: fbo.cpp  matrix.cpp  quaternion.cpp  radiance.cpp  shader.cpp  surface.cpp  texparam.cpp  vbo.cpp
gloop/src/model/: obj_format.cpp  ply_format.cpp  stream.cpp  vtk_format.cpp
include/clemency/: cl.hpp  cmake-config.h.in  djset.hpp  geom.hpp  mesh.hpp  mesh_io.hpp  quadric.hpp  rtree.hpp  volume_integrals.hpp
include/clemency/geom/: aabb2.hpp  aabb3.hpp  circle.hpp  m3.hpp  m4.hpp  octree.hpp  qbezier2.hpp  quat.hpp  solve.hpp  sphere.hpp  tri2.hpp  tri3.hpp  v2.hpp  v3.hpp
lib/: CMakeLists.txt  geom.cpp
opencl/: complex.cl  core.cl  kalibox.cl  mandelbulb.cl  menger.cl  quaternion_julia.cl  sphere.cl
src/: CMakeLists.txt  flip.cpp  isosurface.cpp  mc_base  mc_table.cpp  mc_table.hpp  mesh_clean.cpp  mesh_info.cpp  opencl_mc.cpp  print_mc_table.py
tests/: CMakeLists.txt  test_bezier.cpp  test_m3inv.cpp  test_opencl.cpp
